feat: jwt auth for score update
